# Occupational-Transition

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  issues.md  paper-notes.md  pyproject.toml  requirements.txt
config/: paper_scope.toml  reliability_thresholds.json
crosswalks/: occ22_crosswalk.csv  sector6_crosswalk.csv
docs/: README.md  acceptance_matrix.md  analysis_catalog.md  appendix_draft.md  appendix_outline.md  claim_audit.md  committed_outputs.md  cps_deep_exploration_report.md  cps_extension_blueprint.md  data_registry.csv  evidence_snapshot.md  figure_catalog.md  git_history_hygiene.md  memo_visual_precision.md  methods_data.md  paper_draft_v1_public_data_ai_labor.md  paper_final.md  pr000_crosswalk_methodology.md  release_process.md  reliability_framework.md  replication.md  replication_checklist.md  senate_briefing_evidence_baseline_va.md  senate_briefing_memo.md  senate_briefing_qa_va.md  senator_cps_condensed_brief.md  senator_handout_1page_va.md  senator_packet_order_va.md  source_selection.md  start_here.md  t001_figure1_panelA_methodology.md  t002_figure1_panelB_methodology.md  t003_figure2_panelA_methodology.md  t004_figure2_panelB_counts_methodology.md  t005_figure2_panelB_probs_methodology.md  t006_figure3_panelA_btos_ai_trends_methodology.md  t007_figure3_panelB_btos_workforce_effects_methodology.md  t008_figure4_panelA_jolts_sector_rates_methodology.md  t009_figure4_panelB_ces_sector_index_methodology.md  t010_figure5_capability_matrix_methodology.md  (+12 more)
examples/: 01_btos_national.py  02_occ22_from_crosswalk.py  03_jolts_parse_offline.py  04_sector6_labels.py  05_onet_soc_crosswalk.py  README.md  compare_two_sources.py
figures/: figure1_panelA_occ_baseline.csv  figure1_panelB_task_heatmap.csv  figure2_panelA_hours_by_ai_tercile.csv  figure2_panelB_transition_counts.csv  figure2_panelB_transition_probs.csv  figure3_panelA_btos_ai_trends.csv  figure3_panelB_btos_workforce_effects.csv  figure4_panelA_jolts_sector_rates.csv  figure4_panelB_ces_sector_index.csv  figure5_capability_matrix.csv  figure6_policy_roadmap.csv  figureA10_nls_longrun.csv  figureA1_asec_welfare_by_ai_tercile.csv  figureA2_sipp_event_study.csv  figureA3_cps_supp_validation.csv  figureA4_abs_structural_adoption.csv  figureA5_ces_payroll_hours.csv  figureA6_bed_churn.csv  figureA7_qcew_state_benchmark.csv  figureA8_lehd_benchmark.csv  figureA9_acs_local_composition.csv  memo_btos_state_ai_use_latest.csv  memo_cps_transition_flows.csv  memo_dashboard_kpis.csv  memo_occ_bubble_scatter.csv  memo_policy_roadmap.csv  memo_resolution_ladder.csv  state_deep_dive_qcew_51_peers.csv  state_deep_dive_qcew_51_profile.csv  state_deep_dive_qcew_51_ranks.csv  virginia_memo_kpis.csv
metrics/: alpi_occ22_monthly.csv  awes_occ22_monthly.csv
raw/: bd.industry.txt  btos_api_strata.json  table-a1_a2.xlsx
scripts/: _generate_qa_modules.py  awes_alpi_common.py  build_acceptance_audit_summary.py  build_alpi_occ22_monthly.py  build_awes_occ22_monthly.py  build_btos_sector_ai_use_monthly.py  build_bundle_manifest.py  build_cps_occ22_exit_risk_monthly.py  build_crosswalks.py  build_drift_dashboard.py  build_figure1_panelA.py  (+98 more)
(+219 files in other folders)
