[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "occupational-transition"
version = "0.1.0"
description = "Public data, AI, and US labor markets: measurement from public sources, reproducible labor & AI indicators, open pipeline for labor economics"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "pypdf>=4.0.0",
    "scipy>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.4.0",
    "sphinx>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/fraware/Occupational-Transition"
Repository = "https://github.com/fraware/Occupational-Transition"

[project.scripts]
ot-fetch = "occupational_transition.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/occupational_transition"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
    "/CITATION.cff",
    "/CHANGELOG.md",
    "/CODE_OF_CONDUCT.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
