[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "occupational-transition"
version = "0.1.0"
description = "Public data, AI, and US labor markets: measurement from public sources, reproducible labor & AI indicators, open pipeline for labor economics"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "openpyxl>=3.1.0",
    "pillow>=10.0.0",
    "pandas>=2.0.0",
    "pypdf>=4.0.0",
    "scipy>=1.9.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.4.0",
    "sphinx>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/fraware/Occupational-Transition"
Repository = "https://github.com/fraware/Occupational-Transition"

[project.scripts]
ot = "occupational_transition.cli:main"
ot-fetch = "occupational_transition.cli:main"
ot-run-full = "occupational_transition.cli:main_run_full"
ot-run-visuals = "occupational_transition.cli:main_run_visuals"

[tool.hatch.build.targets.wheel]
packages = ["src/occupational_transition"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
    "/CITATION.cff",
    "/CODE_OF_CONDUCT.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# Quiet pytest-asyncio when the plugin is installed globally (no async tests in-tree).
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 88
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

# Ticket QA modules carry long, explicit error strings; wrapping hurts grepability.
# Pipeline modules mirror upstream URLs and layout-heavy logic from legacy scripts.
[tool.ruff.lint.per-file-ignores]
"src/occupational_transition/qa/**" = ["E501"]
"src/occupational_transition/pipelines/**" = ["E501"]
"src/occupational_transition/reliability/**" = ["E501"]
